# spitft

./: README.md
examples/DrawCircle/: .gitignore  INSTALL  Makefile.am  README  config.h  config.status  config.sub  configure  configure.ac  install-sh  ltmain.sh
examples/DrawCircle/src/: DrawCircle.cpp  Makefile.am  SPI.cpp  SPI.h  TFTv2.cpp  TFTv2.h  pins_arduino.h  variant.cpp  variant.h  wiring_digital.c
